# grit-requester-python

./: README.md  pyproject.toml
grit_requester/: domain.py  query.py
