[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grit_requester"
version = "1.0.0"
description = "Grit requester client for Python"
authors = [{ name = "Rainã Pepe", email = "raina.pepe@outlook.com" }]
dependencies = ["requests"]

[tool.setuptools]
packages = ["grit_requester"]